    [GTK3] add icon chooser dialog #532
    Double-click in icon chooser clicks OK
    [GTK 3.14] Prevent empty rubberband selection GTK3.14 bug avoid #485
    Provide export and import of handler plugin files; update manual #484
    create %O archive in user-selected destination #562
    fix LilyTerm not working correctly eg unzipping file #567
1.0.2   2015-06-02:
    toolbar redesign with design mode right-click ability
    add built-in toolbar items: Show Hidden, Show Thumbnails, Large Icons
    fix Compact view sometimes fails to scroll to selected file #502
    malloc_trim calls to flush out the free heap back to the OS when needed
    fix forgets compress handler after extract to #517
    no re-import bookmarks when up-down-upgrade from < 1.0.1
    Missing pixbuf unref in main_task_view_update_task
    Add keyboard shortcut for handler list in handler dialogs
    fix ftp handler ignores custom port in URL #523
    add Run As Task option to file handlers
    allow escape of underscore in item names #522
    fix Item Prop context opposite of Disable is Show instead of Enable
    get mime type icon from .local XML file before guess
    fix right-click on Bookmarks activates bookmark after menu #521
    fix right-click detailed view clears multiple-file selection #353
    add icon chooser [GTK2 only, GTK3 pending]
    add panel View context menu to main View menu
    add View|Style|Thumbnails (global)
    add show_thumbnails socket property
    fix missing paths on command line hangs introduced in f167b283 #468
    fix hang on access error on startup #539 introduced in f167b28
    fix icon/compact view left-click doesn't unselect other files
    write/read new mimeapps.list Default Applications #450
    archive handlers take precedence over file handlers
    scale menu item icons loaded from file
    force rebuild of folder_view for font change in exo_icon_view
    always reap async child with or without exec_keep_tmp #533