@@ -7,6 +7,7 @@ Icon=spacefm
 StartupNotify=true
 Type=Application
 Terminal=false
-MimeType=inode/directory;inode/mount-point;x-scheme-handler/ssh;x-scheme-handler/smb;x-scheme-handler/nfs;x-scheme-handler/ftp;
+MimeType=inode/directory;inode/mount-point;x-scheme-handler/ssh;x-scheme-handler/smb;x-scheme-handler/nfs;x-scheme-handler/ftp;x-scheme-handler/ptp;x-scheme-handler/mtp;x-scheme-handler/webdav;x-scheme-handler/http;x-scheme-handler/https;
+X-KDE-Protocols=ftp,smb,ssh,ptp,mtp,nfs,webdav,http,https
 _GenericName=File Manager
 _Comment=Browse the file system
